--- a/itp-24/week-4/index.html
+++ b/itp-24/week-4/index.html
@@ -36,6 +36,7 @@
     <h1>WEEK-4 Links</h1>
     <ul>        <li><a href="exercise/index.html" target="_blank">Exercise</a></li>
         <li><a href="lexica/index.html" target="_blank">Lexica</a></li>
+        <li><a href="AI-Prompt-Generator/index.html" target="_blank">AI-Prompt-Generator</a></li>
         <li><a href="Aspect-Ratio-Plus-Plus/index.html" target="_blank">Aspect-Ratio-Plus-Plus</a></li>
         <li><a href="Infinite-Image-Browser/index.html" target="_blank">Infinite-Image-Browser</a></li>
         <li><a href="Regional-Prompter/index.html" target="_blank">Regional-Prompter</a></li>
