--- a/itp-24/week-6/index.html
+++ b/itp-24/week-6/index.html
@@ -37,7 +37,7 @@
     <ul>        <li><a href="exercise/index.html" target="_blank">Exercise</a></li>
         <li><a href="restaurant.png/index.html" target="_blank">Restaurant.Png</a></li>
         <li><a href="sd-webui-controlnet/index.html" target="_blank">Sd-Webui-Controlnet</a></li>
-        <li><a href="ControlNet v1.1 Models (for SD 1.5) - Fast/index.html" target="_blank">Controlnet V1.1 Models (For SD 1.5) - Fast</a></li>
+        <li><a href="ControlNet v1.1 Models (for SD 1.5)/index.html" target="_blank">Controlnet V1.1 Models (For SD 1.5)</a></li>
         <li><a href="ControlNet Union Models (SDXL)/index.html" target="_blank">Controlnet Union Models (SDXL)</a></li>
     </ul>
 </body>
