--- a/itp-24/week-8/index.html
+++ b/itp-24/week-8/index.html
@@ -36,6 +36,8 @@
     <h1>WEEK-8 Links</h1>
     <ul>        <li><a href="kohya-trainer/index.html" target="_blank">Kohya-Trainer</a></li>
         <li><a href="pexels-man-dataset/index.html" target="_blank">Pexels-Man-Dataset</a></li>
+        <li><a href="pexels/index.html" target="_blank">Pexels</a></li>
+        <li><a href="kohya_config_sdxl/index.html" target="_blank">Kohya_Config_Sdxl</a></li>
     </ul>
 </body>
 </html>
