--- a/itp-24/week-8/index.html
+++ b/itp-24/week-8/index.html
@@ -38,6 +38,7 @@
         <li><a href="pexels-man-dataset/index.html" target="_blank">Pexels-Man-Dataset</a></li>
         <li><a href="pexels/index.html" target="_blank">Pexels</a></li>
         <li><a href="kohya_config_sdxl/index.html" target="_blank">Kohya_Config_Sdxl</a></li>
+        <li><a href="kohya_config_sd15/index.html" target="_blank">Kohya_Config_Sd15</a></li>
     </ul>
 </body>
 </html>
