--- a/events/24/CUNY-GenAI/index.html
+++ b/events/24/CUNY-GenAI/index.html
@@ -34,7 +34,9 @@
 </head>
 <body>
     <h1>CUNY-GENAI Links</h1>
-    <ul>        <li><a href="Yuguang Zhang - Presentation/index.html" target="_blank">Yuguang Zhang - Presentation</a></li>
+    <ul>        <li><a href="Performance Trailer/index.html" target="_blank">Performance Trailer</a></li>
+        <li><a href="Yuguang Zhang - Presentation/index.html" target="_blank">Yuguang Zhang - Presentation</a></li>
+        <li><a href="BO-Demo/index.html" target="_blank">BO-Demo</a></li>
     </ul>
 </body>
 </html>
