--- a/events/24/CUNY-GenAI/BO-Demo/index.html
+++ b/events/24/CUNY-GenAI/BO-Demo/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://drive.google.com/file/d/1L6aBtqItSc9KCyCK4qDaNJ7G1A-q08K4/view">
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=E8h652x-UmE&ab_channel=DataFluenciesTheatreProject">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://drive.google.com/file/d/1L6aBtqItSc9KCyCK4qDaNJ7G1A-q08K4/view">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://www.youtube.com/watch?v=E8h652x-UmE&ab_channel=DataFluenciesTheatreProject">click here</a>.</p>
 </body>
 </html>
