--- a/emerson/24/oct-workshop/index.html
+++ b/emerson/24/oct-workshop/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FALL-WORKSHOP Links</title>
+    <title>OCT-WORKSHOP Links</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1>FALL-WORKSHOP Links</h1>
+    <h1>OCT-WORKSHOP Links</h1>
     <ul>        <li><a href="practice-1/index.html" target="_blank">Practice-1</a></li>
         <li><a href="practice-2/index.html" target="_blank">Practice-2</a></li>
         <li><a href="practice-3/index.html" target="_blank">Practice-3</a></li>
